--- a/web/index.html
+++ b/web/index.html
@@ -12,5 +12,6 @@
         <script src="lib/underscore.js"></script>
         <script src="js/app.js"></script>
         <script src="js/controllers/UserController.js"></script>
+        <script src="js/controllers/OrderController.js"></script>
     </body>
 </html>
