--- a/web/index.html
+++ b/web/index.html
@@ -2,6 +2,7 @@
 <html data-ng-app="luncher">
     <head>
         <title>Luncher</title>
+        <meta charset="utf-8">
     </head>
     <body>
         <div data-ng-view></div>
