Some basic styling

--- a/web/index.html
+++ b/web/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>Luncher</title>
         <meta charset="utf-8">
+        <link rel="stylesheet" href="css/luncher.css" />
     </head>
     <body>
         <div data-ng-view></div>
